# researcher_openenv

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  plan.md  pyproject.toml  requirements.txt  test_http.py  test_smoke.py
data/: topics.json
env/: __init__.py  models.py  researcher_env.py
graders/: __init__.py  research_grader.py
server/: app.py
tasks/: task_registry.py
tools/: code_executor.py  scraper.py  web_search.py
